Pre-Prod V1.1, Fixed mobile underflows and misalignments

--- a/nav-UI.css
+++ b/nav-UI.css
@@ -135,7 +135,7 @@ section div {
 
 footer {
     width: auto;
-    height: 80px;
+    height: fit-content;
     background-color: var(--br);
     text-align: center;
 }
